--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>moudule 4 solution</title>
     <script>
-       var a = ["doe", "jack", "zack", "john","kelly", "mia", "sofia", "lexa"];
+       var a = ["Yaakov", "John", "Jen", "Jason", "Paul", "Frank", "Larry", "Paula", "Laura", "Jim"];
        
        for (x in a)
         {
