--- a/index.html
+++ b/index.html
@@ -1,37 +1,15 @@
 <!DOCTYPE html>
-<html lang="en-US">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>moudule 4 solution</title>
-    <script>
-       var a = ["Yaakov", "John", "Jen", "Jason", "Paul", "Frank", "Larry", "Paula", "Laura", "Jim"];
-       
-       for (x in a)
-        {
-          
-          for(i in a[x])
-           { 
-             m=a[x].charAt(0);
-             if (m=="j" || m=="J")
-                 {
-                  console.log("goodbye " +a[x]);
-                  }
-             else {
-                   console.log("hello " +a[x]);
-                   }
-           } 
-         }
-
-    </script>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script1.js"></script>
 </head>
-
 <body>
-
+<title>module 4 solution</title>  
+<h1>Module 4 Solution Starter</h1>
 </body>
-
-
-
 </html>
 
