--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
-  <script src="SpeakHello.js"></script>
+  <script src="https://github.com/marushika/marushika.github.io/blob/main/SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script1.js"></script>
 </head>
