--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
   <script src="https://github.com/marushika/marushika.github.io/blob/main/SpeakHello.js"></script>
-  <script src="SpeakGoodBye.js"></script>
-  <script src="script1.js"></script>
+  <script src="https://github.com/marushika/marushika.github.io/blob/main/SpeakGoodbye.js"></script>
+  <script src="https://github.com/marushika/marushika.github.io/blob/main/script.js"></script>
 </head>
 <body>
 <title>module 4 solution</title>  
