--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Module 4 Solution Starter</title>
   <script src="https://github.com/marushika/marushika.github.io/blob/main/SpeakHello.js"></script>
   <script src="https://github.com/marushika/marushika.github.io/blob/main/SpeakGoodbye.js"></script>
-  <script src="https://github.com/marushika/marushika.github.io/blob/main/script.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
 <title>module 4 solution</title>  
