--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
-  <script src="https://github.com/marushika/marushika.github.io/blob/main/SpeakHello.js"></script>
-  <script src="https://github.com/marushika/marushika.github.io/blob/main/SpeakGoodbye.js"></script>
+  <script src=SpeakHello.js"></script>
+  <script src="SpeakGoodbye.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
